# Ramsey-DQBF

./: .gitignore  CMakeLists.txt  readme.md
inc/abc_wrapper/: abc_wrapper.hpp
inc/common/: dqcir.hpp  dqcir_simplify.hpp  dqdimacs.hpp
src/: main.cpp
src/abc_wrapper/: abc_wrapper.cpp
src/common/: dimacs_from_dqcir.cpp  dqcir.cpp  dqcir_simplify.cpp  dqdimacs.cpp
testcases/: gen_testcases_dqcir.py  gen_testcases_dqdimacs.py
testcases/dqcir/: R_3_3_3_sat.dqcir  R_3_3_4_sat.dqcir  R_3_3_5_sat.dqcir  R_3_3_6_unsat.dqcir  R_3_3_7_unsat.dqcir  R_3_3_8_unsat.dqcir  R_3_4_10_unsat.dqcir  R_3_4_11_unsat.dqcir  R_3_4_6_sat.dqcir  R_3_4_7_sat.dqcir  R_3_4_8_sat.dqcir  R_3_4_9_unsat.dqcir  R_3_5_11_sat.dqcir  R_3_5_12_sat.dqcir  R_3_5_13_sat.dqcir  R_3_5_14_unsat.dqcir  R_3_5_15_unsat.dqcir  R_3_5_16_unsat.dqcir  R_3_6_15_sat.dqcir  R_3_6_16_sat.dqcir  R_3_6_17_sat.dqcir  R_3_6_18_unsat.dqcir  R_3_6_19_unsat.dqcir  R_3_6_20_unsat.dqcir  R_4_4_15_sat.dqcir  R_4_4_16_sat.dqcir  R_4_4_17_sat.dqcir  R_4_4_18_unsat.dqcir  R_4_4_19_unsat.dqcir  R_4_4_20_unsat.dqcir  R_4_5_22_sat.dqcir  R_4_5_23_sat.dqcir  R_4_5_24_sat.dqcir  R_4_5_25_unsat.dqcir  R_4_5_26_unsat.dqcir  R_4_5_27_unsat.dqcir  R_4_6_35_sat.dqcir  R_4_6_35_unknown.dqcir  R_4_6_36_unknown.dqcir  R_4_6_37_unknown.dqcir  (+9 more)
testcases/dqdimacs/: R_3_3_3_sat.dqdimacs  R_3_3_4_sat.dqdimacs  R_3_3_5_sat.dqdimacs  R_3_3_6_unsat.dqdimacs  R_3_3_7_unsat.dqdimacs  R_3_3_8_unsat.dqdimacs  R_3_4_10_unsat.dqdimacs  R_3_4_11_unsat.dqdimacs  R_3_4_6_sat.dqdimacs  R_3_4_7_sat.dqdimacs  R_3_4_8_sat.dqdimacs  R_3_4_9_unsat.dqdimacs  (+36 more)
